added nvila vlm support

--- a/docker/launchables/.env
+++ b/docker/launchables/.env
@@ -16,8 +16,8 @@ CA_RAG_CONFIG=./config.yaml
 GUARDRAILS_CONFIG=./guardrails
 
 #Set VLM to VILA
-VLM_MODEL_TO_USE=vila-1.5
-MODEL_PATH=ngc:nim/nvidia/vila-1.5-40b:vila-yi-34b-siglip-stage3_1003_video_v8
+#VLM_MODEL_TO_USE=vila-1.5
+#MODEL_PATH=ngc:nim/nvidia/vila-1.5-40b:vila-yi-34b-siglip-stage3_1003_video_v8
 
 #Adjust misc configs if needed
 DISABLE_GUARDRAILS=false
