added alert config (#8)
Co-authored-by: Shubham Agrawal <shuagrawal@nvidia.com>

--- a/docker/local_deployment/config.yaml
+++ b/docker/local_deployment/config.yaml
@@ -41,3 +41,13 @@ chat:
   reranker:
     model: "nvidia/llama-3.2-nv-rerankqa-1b-v1"
     base_url: "http://0.0.0.0:9235/v1" #FIXME - update url to running reranker NIM Instance 
+
+notification:
+  enable: true
+  endpoint: "http://127.0.0.1:60000/via-alert-callback"
+  llm:
+    model: "meta/llama-3.1-70b-instruct"
+    base_url: "http://0.0.0.0:8000/v1" #FIXME - update url to running LLM Instance 
+    max_tokens: 2048
+    temperature: 0.2
+    top_p: 0.7
