--- a/deploy/docker/local_deployment_single_gpu/config.yaml
+++ b/deploy/docker/local_deployment_single_gpu/config.yaml
@@ -31,8 +31,8 @@ summarization:
     batch_size: 5
     batch_max_concurrency: 20
   prompts:
-    caption: "Write a concise and clear dense caption for the provided warehouse video, focusing on irregular or hazardous events such as boxes falling, workers not wearing PPE, workers falling, workers taking photographs, workers chitchatting, forklift stuck, etc. Start and end each sentence with a time stamp."
-    caption_summarization: "You should summarize the following events of a warehouse in the format start_time:end_time:caption. For start_time and end_time use . to seperate seconds, minutes, hours. If during a time segment only regular activities happen, then ignore them, else note any irregular activities in detail. The output should be bullet points in the format start_time:end_time: detailed_event_description. Don't return anything else except the bullet points."
+    caption: "For each frame of the video, produce a detailed caption prefixed with the frame's timestamp in seconds. Describe all visible objects, actions and prominent colors. If audio is present, include any relevant sounds or speech for that timestamp. Use the format `timestamp: description`."
+    caption_summarization: "Summarize the frame-by-frame captions into bullet points in the format start_time:end_time: detailed_event_description. Use '.' to separate hours, minutes and seconds. Ignore routine activity and focus on noteworthy events. Only output the bullet points."
     summary_aggregation: "You are a warehouse monitoring system. Given the caption in the form start_time:end_time: caption, Aggregate the following captions in the format start_time:end_time:event_description. If the event_description is the same as another event_description, aggregate the captions in the format start_time1:end_time1,...,start_timek:end_timek:event_description. If any two adjacent end_time1 and start_time2 is within a few tenths of a second, merge the captions in the format start_time1:end_time2. The output should only contain bullet points.  Cluster the output into Unsafe Behavior, Operational Inefficiencies, Potential Equipment Damage and Unauthorized Personnel"
 
 chat:
