Improve frame caption prompt

--- a/src/vss-engine/config/config.yaml
+++ b/src/vss-engine/config/config.yaml
@@ -25,7 +25,7 @@ summarization:
   params:
     batch_size: 6 # Use even batch size if speech recognition enabled.
   prompts:
-    caption: "For each frame of the video, produce a detailed caption prefixed with the frame's timestamp in seconds. Describe all visible objects, actions and prominent colors. If audio is present, include any relevant sounds or speech for that timestamp. Use the format `timestamp: description`."
+    caption: "For each frame of the video, produce an exhaustive description prefixed with the frame's timestamp in seconds. Describe every visible object, its location, actions, and prominent colors. If audio is present, transcribe the speech or describe the sound heard for that timestamp. Use the format `timestamp: description`."
     caption_summarization: "Summarize the frame-by-frame captions into bullet points in the format start_time:end_time: detailed_event_description. Use '.' to separate hours, minutes and seconds. Ignore routine activity and focus on noteworthy events. Only output the bullet points."
     summary_aggregation: "You are a warehouse monitoring system. Given the caption in the form start_time:end_time: caption, Aggregate the following captions in the format start_time:end_time:event_description. If the event_description is the same as another event_description, aggregate the captions in the format start_time1:end_time1,...,start_timek:end_timek:event_description. If any two adjacent end_time1 and start_time2 is within a few tenths of a second, merge the captions in the format start_time1:end_time2. The output should only contain bullet points.  Cluster the output into Unsafe Behavior, Operational Inefficiencies, Potential Equipment Damage and Unauthorized Personnel"
 
