--- a/.project/spec.yaml
+++ b/.project/spec.yaml
@@ -54,7 +54,7 @@ environment:
             - name: gradio
               type: custom
               class: webapp
-              start_command: python src/vss_engine/gradio_frontend.py
+              start_command: python3 src/vss_engine/gradio_frontend.py
               health_check_command: '[ $(curl -o /dev/null -s -w "%{http_code}" http://localhost:7860) == "200" ]'
               stop_command: pkill -f gradio_frontend.py
               user_msg: ""
