--- a/Dockerfile.telemetry
+++ b/Dockerfile.telemetry
@@ -2,4 +2,4 @@ FROM python:3.10-slim
 WORKDIR /app
 COPY src/telemetry.py src/telemetry_server.py ./
 RUN pip install --no-cache-dir requests
-CMD ["python", "telemetry_server.py"]
+CMD ["python3", "telemetry_server.py"]
