--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,7 +1,7 @@
 FROM nvcr.io/nvidia/pytorch:24.05-py3
 WORKDIR /app
 COPY requirements.txt ./
-RUN apt-get update && apt-get install -y ffmpeg && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y ffmpeg libgl1 libglib2.0-0 && rm -rf /var/lib/apt/lists/*
 RUN pip install --no-cache-dir -r requirements.txt
 COPY src src
 COPY telemetry.py telemetry.py
