Add GPU device IDs to compose files and clarify README

--- a/docker-compose.modular.yml
+++ b/docker-compose.modular.yml
@@ -13,7 +13,7 @@ services:
         reservations:
           devices:
             - driver: nvidia
-              count: all
+              device_ids: ["0"]
               capabilities: [gpu]
     runtime: nvidia
 
@@ -30,7 +30,7 @@ services:
         reservations:
           devices:
             - driver: nvidia
-              count: all
+              device_ids: ["0"]
               capabilities: [gpu]
     runtime: nvidia
 
@@ -47,7 +47,7 @@ services:
         reservations:
           devices:
             - driver: nvidia
-              count: all
+              device_ids: ["0"]
               capabilities: [gpu]
     runtime: nvidia
 
@@ -59,6 +59,14 @@ services:
       - "8002:8002"
     environment:
       - NVIDIA_VISIBLE_DEVICES=all
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              device_ids: ["0"]
+              capabilities: [gpu]
+    runtime: nvidia
 
   frontend:
     build:
@@ -84,7 +92,7 @@ services:
         reservations:
           devices:
             - driver: nvidia
-              count: all
+              device_ids: ["0"]
               capabilities: [gpu]
     runtime: nvidia
 
