--- a/Dockerfile.reranker
+++ b/Dockerfile.reranker
@@ -3,7 +3,7 @@
 # PyTorch images from Docker Hub provide tagged releases with the
 # desired framework version. We rely on the CUDA-enabled runtime
 # variant so GPU acceleration remains available when deployed.
-FROM pytorch/pytorch:2.7.1-cuda12.6-cudnn9-runtime
+FROM --platform=linux/amd64 pytorch/pytorch:2.7.1-cuda12.6-cudnn9-runtime
 WORKDIR /app
 RUN pip install --no-cache-dir fastapi uvicorn sentence-transformers
 COPY src/reranker_server.py .
