--- a/Dockerfile.telemetry
+++ b/Dockerfile.telemetry
@@ -1,4 +1,4 @@
-FROM python:3.10-slim
+FROM --platform=linux/amd64 python:3.10-slim
 WORKDIR /app
 COPY src/telemetry.py src/telemetry_server.py ./
 RUN pip install --no-cache-dir requests
